@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java -jar ivy-log-viewer.jar
+java --module-path $JAVA_FX_HOME/lib --add-modules javafx.controls,javafx.fxml -jar ivy-log-viewer.jar 
